// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-member-group should delete a member group 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;

exports[`delete-member-group should handle non-existent member group 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The requested member group could not be found","status":404,"operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;
